tdf#105679 honor more saved settings on direct PDF export

Change-Id: I555b2e2609b731ffac09014a3d84eda434cbb7a6